--- a/src/countryCard.hbs
+++ b/src/countryCard.hbs
@@ -4,12 +4,10 @@
     <ul>
         <li>Capital: {{capital}}</li>
         <li>Population: {{population}}</li>
-        </ul>
-    <ul>
-           Languages:
+        <li>Languages:
            {{#each languages}}{{this.name}}
            {{/each}}
-       
+       </li>
     </ul>
 </div>
 
