--- a/src/renderCountryList.hbs
+++ b/src/renderCountryList.hbs
@@ -2,7 +2,7 @@
 <div>
    {{#each this}}
 <div>
-    <img scr="{{this.flag}}" alt = "{{this.name}}" width = "60", height="40"/>
+    <img src="{{this.flag}}" alt = "{{name}}" width = "60", height="40"/>
     <p>{{this.name}}</p>
 </div>
   {{/each}}
