--- a/src/renderCountryList.hbs
+++ b/src/renderCountryList.hbs
@@ -1,9 +1,9 @@
   
 <div>
    {{#each this}}
-<div>
+<div class="render-country">
     <img src="{{this.flag}}" alt = "{{name}}" width = "60", height="40"/>
-    <p>{{this.name}}</p>
+    <p class="name-country">{{this.name}}</p>
 </div>
   {{/each}}
   </div>
